# Tech-Interview

backend/: CMakeLists.txt  instructions.md
backend/schema/: main.sql
backend/src/: database_service.cpp  database_service.h  main.cpp  models.h  routes.cpp  routes.h
frontend/: package-lock.json  package.json
frontend/src/: App.jsx
frontend/src/pages/: Start.jsx
frontend/src/styles/: start.css
